refactor: Service Facade 역할을 위한 Orchestrator 도입 및 controller 의존성 변경
- Service 순환 참조 예방을 위해 Controller와 Service 사이의 중간 계층인 Orchestrator 도입
- Orchestrator는 Controller와 Service 레이어 사이의 결합도를 완화하며, 두 레이어의 dto를 변환하는 책임도 가짐